Work in progress: Prevent swiper js from overlapping id card on small screens

--- a/src/components/IdManager.css
+++ b/src/components/IdManager.css
@@ -32,7 +32,7 @@
     display: inline-block;
     position: relative;
     width: auto;
-    transform: translateX(-30%) scale(0.7);
+    transform: scale(0.7);
   }
 }
 
